# solana-custom-project

./: Anchor.toml  README.md
programs/sol_program/: Cargo.toml
programs/sol_program/src/: ins.rs  lib.rs  state.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000083.sst  000084.sst  000085.sst  000086.sst  000087.sst  000088.sst  000089.sst  IDENTITY  LOG  LOG.old.1668318701716715  MANIFEST-000090  OPTIONS-000125  OPTIONS-000127
tests/: my_sol_data.ts
