[package]
name = "sol_program"
version = "0.1.0"
description = "Akhil Sharma, program for youtube channel https://www.youtube.com/c/AkhilSharmaTech"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
